--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+     <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
+     <link rel="icon" sizes="16x16"  href="images/favicon-16x16.png">
+     <link rel="icon" sizes="32x32"  href="images/favicon-32x32.png">
+
+     <link rel="android-chrome" type="image/png" sizes="192x192" href="images/android-chrome-192x192.png">
+     <link rel="android-chrome" type="image/png" sizes="512x512" href="images/android-chrome-512x512.png">
+
     <title>HTML, CSS and SASS Boilerplate</title>
     <meta
       name="description"
